# frankenlibc

./: .gitignore  AGENTS.md  CHANGELOG.md  FEATURE_PARITY.md  README.md  codex.mcp.json  gemini.mcp.json  perf_franken_py.data  perf_franken_py2.data  support_matrix.json
.beads/: issues.jsonl
crates/frankenlibc-bench/: Cargo.toml
crates/frankenlibc-bench/benches/: alien_cs_bench.rs  baseline_capture_bench.rs  condvar_bench.rs  malloc_bench.rs  membrane_bench.rs  runtime_math_bench.rs  runtime_math_kernels_bench.rs  string_bench.rs
crates/frankenlibc-fuzz/: Cargo.toml
crates/frankenlibc-fuzz/corpus/fuzz_inet/: seed_abbreviated_v6  seed_any  seed_invalid  seed_link_local  seed_mapped_v4
crates/frankenlibc-fuzz/corpus/fuzz_time/: seed_2024  seed_strftime_specifiers  seed_y2k
crates/frankenlibc-fuzz/fuzz_targets/: fuzz_dirent.rs  fuzz_iconv.rs  fuzz_inet.rs  fuzz_malloc.rs  fuzz_math.rs  fuzz_pwd_grp.rs  fuzz_resolver.rs  fuzz_stdlib.rs  fuzz_time.rs
crates/frankenlibc-membrane/: Cargo.toml  build.rs
crates/frankenlibc-membrane/artifacts/sos/: size_class_certificate.task  thread_safety_certificate.task
crates/frankenlibc-membrane/src/: alien_cs_metrics.rs  arena.rs  bloom.rs  check_oracle.rs  config.rs  decision_contract.rs  ebr.rs  evidence_ledger.rs  fingerprint.rs  galois.rs  heal.rs  hji_reachability.rs  lattice.rs  lib.rs  mean_field_game.rs  page_oracle.rs  persistence.rs  ptr_validator.rs  rough_path.rs  schrodinger_bridge.rs  seqlock.rs  tls_cache.rs
crates/frankenlibc-membrane/src/runtime_math/: alpha_investing.rs  bandit.rs  clifford.rs  cohomology.rs  control.rs  coupling.rs  evidence.rs  grothendieck_glue.rs  higher_topos.rs  ktheory.rs  matrix_concentration.rs  mod.rs  operator_norm.rs  policy_table.rs  pomdp_repair.rs  serre_spectral.rs  sos_barrier.rs  sos_invariant.rs
crates/frankenlibc-membrane/tests/: alien_cs_cross_concept_test.rs  alien_cs_e2e_test.rs  alien_cs_proptest.rs  allocator_membrane_invariants_sequences_test.rs  ebr_integration_test.rs  fragmentation_storms_test.rs  runtime_math_dual_mode_e2e_test.rs  seqlock_integration_test.rs  tsm_pipeline_e2e_test.rs
docs/: memory_model_decisions.md
scripts/: bd15n2_fixture_gap_fill_run.sh  bd1f35_thread_stress_run.sh  bd1qy_mutex_fixture_run.sh  c_fixture_suite.sh  check_callthrough_census.sh  check_conformance_fixture_pipeline.sh  check_conformance_matrix.sh  check_dlfcn_boundary_policy.sh  check_e2e_suite.sh  check_errno_edge_report.sh  check_iconv_codec_scope_ledger.sh  check_per_symbol_fixture_tests.sh  check_posix_obligation_matrix.sh  check_replacement_guard.sh  check_runtime_math_hji_viability_proofs.sh  check_setjmp_semantics_contract.sh  check_stdio_phase_strategy.sh  check_stub_priority.sh  check_stub_regression_guard.sh  check_stub_todo_debt_census.sh  check_workload_api_wave_plan.sh  ci.sh  e2e_suite.sh  fuzz_nightly.sh  generate_conformance_fixture_pipeline.py  generate_conformance_fixture_unit_tests.py  generate_cross_report_consistency.py  generate_cve_hardened_assertions.py  generate_fuzz_harness_architecture.py  generate_runtime_env_inventory.py  (+4 more)
(+279 files in other folders)
