[package]
name = "frankenlibc-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
arbitrary = { version = "1", features = ["derive"] }
frankenlibc-membrane = { path = "../frankenlibc-membrane" }
frankenlibc-core = { path = "../frankenlibc-core" }

[[bin]]
name = "fuzz_string"
path = "fuzz_targets/fuzz_string.rs"
doc = false

[[bin]]
name = "fuzz_malloc"
path = "fuzz_targets/fuzz_malloc.rs"
doc = false

[[bin]]
name = "fuzz_membrane"
path = "fuzz_targets/fuzz_membrane.rs"
doc = false

[[bin]]
name = "fuzz_printf"
path = "fuzz_targets/fuzz_printf.rs"
doc = false

[[bin]]
name = "fuzz_resolver"
path = "fuzz_targets/fuzz_resolver.rs"
doc = false

[[bin]]
name = "fuzz_regex"
path = "fuzz_targets/fuzz_regex.rs"
doc = false

[[bin]]
name = "fuzz_scanf"
path = "fuzz_targets/fuzz_scanf.rs"
doc = false

[[bin]]
name = "fuzz_stdlib"
path = "fuzz_targets/fuzz_stdlib.rs"
doc = false

[[bin]]
name = "fuzz_ctype"
path = "fuzz_targets/fuzz_ctype.rs"
doc = false

[[bin]]
name = "fuzz_time"
path = "fuzz_targets/fuzz_time.rs"
doc = false

[[bin]]
name = "fuzz_math"
path = "fuzz_targets/fuzz_math.rs"
doc = false

[[bin]]
name = "fuzz_inet"
path = "fuzz_targets/fuzz_inet.rs"
doc = false

[workspace]
